--- a/data/blog/diagrams-as-code.mdx
+++ b/data/blog/diagrams-as-code.mdx
@@ -36,6 +36,6 @@ Output:
 Bonus: Mermaid.js has built in support in GitHub for markdown files. You won't need to do anything special to generate diagrams here.
 
 
-That's it, what's your take on these? Do you know any tools which offer better options or more customisation? Leave a comment :D !
+That's it, what's your take on these? Do you know any tools which offer better options or more customisation? Leave a comment :smile: !
 
 ---
