--- a/data/blog/diagrams-as-code.mdx
+++ b/data/blog/diagrams-as-code.mdx
@@ -9,7 +9,7 @@ Have you ever started working on a new project, started going through the docume
 
 ![shocked meme](https://dev-to-uploads.s3.amazonaws.com/uploads/articles/0earaq8np9rtokfd0zvf.gif)
 
-I've certainly seen this situation arise numerous times in my career so far. So what do you do? One solution would be whoever's reading the document needs to do the work to figure out the updated architecture or flows and generate the new diagrams using . This isn't ideal and these are bound to get stale again in the future.
+I've certainly seen this situation arise numerous times in my career so far. So what do you do? One solution would be whoever's reading the document needs to do the work to figure out the updated architecture or flows and generate the new diagrams using UML tools. This isn't ideal and these are bound to get stale again in the future.
 
 Another solution which I prefer is - maintaining diagrams as code which live in the same repos as the code. There are many tools these days which help us author diagrams from code.
 My favorites are [Mermaid](https://github.com/mermaid-js/mermaid) and [PlantUML](https://plantuml.com/).
