feat: add demo section and image for Git WIP snippet

--- a/data/snippets/git-wip.mdx
+++ b/data/snippets/git-wip.mdx
@@ -9,3 +9,6 @@ You can add the below to `~/.gitconfig` to use this.
 [alias]
     wip = !git for-each-ref --sort=committerdate refs/heads/ --format='%(HEAD) %(align:35)%(color:yellow)%(refname:short)%(color:reset)%(end) - %(color:red)%(objectname:short)%(color:reset) - %(align:40)%(contents:subject)%(end) - %(authorname) (%(color:green)%(committerdate:relative)%(color:reset))'
 ```
+
+Demo
+![learn git](/static/images/git_wip.png)
